--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
+  "tabWidth": 4,
   "arrowParens": "avoid",
-  "semi": false
+  "semi": false,
+  "singleQuote": false,
+  "trailingComma": "all"
 }
