--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/netlify": "^1.0.4",
     "@astrojs/svelte": "^1.0.0",
     "astro": "^1.3.0",
+    "sass": "^1.55.0",
     "svelte": "^3.50.1"
   },
   "devDependencies": {
