--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.11.5",
     "@astrojs/netlify": "^1.0.4",
     "@astrojs/svelte": "^1.0.0",
     "astro": "^1.3.0",
+    "moment": "^2.29.4",
     "sass": "^1.55.0",
     "svelte": "^3.50.1"
   },
